@@ -26,16 +26,10 @@ lowfhCopula <- function(dim = 2L)
         expr <- paste0("max(", expr, ",0)")
         parse(text = expr)
     }
-    cdf <- cdfExpr(dim)
     new("lowfhCopula",
         dimension = as.integer(dim),
-        exprdist = c(cdf = cdf,
-                     pdf = expression()),
-        parameters = double(0),
-        param.names = character(0),
-        param.lowbnd = double(0),
-        param.upbnd = double(0),
-        fullname = "<deprecated slot>")
+        exprdist = c(cdf = cdfExpr(dim),
+                     pdf = expression())) # FIXME? empty pdf disappears !?
 }
 
 
