@@ -3,11 +3,13 @@
 \docType{class}
 \alias{copula-class}
 \alias{Copula-class}
+\alias{dimCopula-class}
 \alias{parCopula-class}
 \alias{xcopula-class}
 % methods
 \alias{dim,copula-method}
 \alias{dim,xcopula-method}
+\alias{dim,dimCopula-method}
 \description{
   A copula is a multivariate distribution with uniform margins.
   The virtual class \code{"Copula"} is the mother (or \dQuote{super
@@ -19,9 +21,14 @@
   hence fitted to data.  For these, at least the \code{\link{dim}()} method
   must be well defined.
 
-  The virtual class \code{"copula"} extends \code{"parCopula"} and is
-  the mother of all copula classes from former package \pkg{copula}.  It
-  has set of slots for the dimension and parameter vector, see below.
+  The virtual class \code{"dimCopula"} extends \code{"Copula"} and has
+  an explicit slot \code{dimension}, with corresponding trivial
+  \code{\link{dim}()} method.
+
+  The virtual class \code{"copula"} extends bot \code{"dimCopula"} and
+  \code{"parCopula"} and is the mother of all copula classes from former
+  package \pkg{copula}.  It has set of slots for (the dimension and)
+  parameter vector, see below.
 
   The virtual class \code{"xcopula"} extends \code{"parCopula"} and
   contains a slot \code{copula}; an (\dQuote{actual}) class example are
@@ -30,16 +37,15 @@
 \section{Objects from the Class}{
   Objects are typically created by are by \code{\link{tCopula}()},
   \code{\link{evCopula}()}, etc.
-
-  Note that the virtual class \code{"Copula"}, is simply the union (see
-  \code{\link{setClassUnion}}) of the two classes \code{"copula"} and
-  \code{\linkS4class{nacopula}}.
 }
 \section{Slots}{
-  Class \code{"copula"} (and all its subclasses) have slots
+  Class \code{"dimCopula"} and its subclasses, notably
+  \code{"copula"}, have a slot
+  \describe{ \item{\code{dimension}:}{an \code{"integer"} (of length 1), the
+      copula dimension \eqn{d}.} }
+
+  Class \code{"copula"} (and its subclasses) have \emph{additional} slots
   \describe{
-    \item{\code{dimension}:}{an \code{"integer"} (of length 1), the
-      copula dimension \eqn{d}.}
     \item{\code{parameters}:}{\code{\link{numeric}} vector of
       parameter values, can be NA (i.e., \code{\link{NA_real_}}).}
     \item{\code{param.names}:}{\code{"character"} vector of parameter
